tests/errors/continue_compilation_walrus.f90
program continue_compilation_walrus
    implicit none
    integer :: x
    type :: t
        integer :: n
    end type
    type(t) :: obj
    x := 5
    a := obj
    y := 5
    y := 10
end program
